--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,9 @@
 .recipes{
     display:flex;
     flex-wrap: wrap;
-    gap:40px;
+    gap:15px;
     box-shadow: 0px 0px 0px black;
+    justify-content: center;
 }
 .recipes img {
     width: 300px;
